# SMIT_test_task

./: Dockerfile  README.md  app.py  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
endpoint/: endpoint.py
model/: model.py
schema/: schema.py
